--- a/Notebook/Agri-Detect-Beans.ipynb
+++ b/Notebook/Agri-Detect-Beans.ipynb
@@ -1,8 +1,14 @@
 {
  "cells": [],
  "metadata": {
+  "kernelspec": {
+   "display_name": "heart",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
