--- a/Notebook/Agri-Detect-Potato-Improved.ipynb
+++ b/Notebook/Agri-Detect-Potato-Improved.ipynb
@@ -172,17 +172,23 @@
     "x = base_model.output\n",
     "x = GlobalAveragePooling2D()(x)\n",
     "x = Dense(512, activation='relu', kernel_regularizer=l2(0.001))(x) # Added L2 regularization\n",
-    "x = Dropout(0.5)(x) # Existing Dropout\n",
-    "x = Dense(256, activation='relu', kernel_regularizer=l2(0.001))(x) # Added another Dense layer with L2\n",
-    "x = Dropout(0.4)(x) # Added another Dropout layer\n",
+    "x = Dropout(0.6)(x) # Existing Dropout
+",
+    "x = Dense(256, activation='relu', kernel_regularizer=l2(0.001))(x) # Added another Dense layer with L2
+",
+    "x = Dropout(0.5)(x) # Added another Dropout layer
+",
     "predictions = Dense(NUM_CLASSES, activation='softmax')(x)\n",
     "\n",
     "model = Model(inputs=base_model.input, outputs=predictions)\n",
     "\n",
     "# Compile the model for the first phase (feature extraction)\n",
-    "model.compile(\n",
-    "    optimizer=Adam(learning_rate=0.001),\n",
-    "    loss='categorical_crossentropy',\n",
+    "model.compile(
+",
+    "optimizer=Adam(learning_rate=0.0005),
+",
+    "loss='categorical_crossentropy',
+"
     "    metrics=['accuracy']\n",
     ")\n",
     "\n",
@@ -225,18 +231,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS_PHASE1 = 20 # Fewer epochs for feature extraction\n",
+    "EPOCHS_PHASE1 = 30 # Increased epochs for feature extraction\n",
     "EPOCHS_PHASE2 = 30 # More epochs for fine-tuning\n",
     "BATCH_SIZE = 32\n",
     "\n",
     "# Callbacks for Phase 1 (Feature Extraction)\n",
     "callbacks_phase1 = [\n",
-    "    EarlyStopping(monitor='val_loss', patience=7, verbose=1, restore_best_weights=True),\n",
-    "    ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=1e-6, verbose=1),\n",
+    "    EarlyStopping(monitor='val_loss', patience=5, verbose=1, restore_best_weights=True), # Reduced patience\n",
+    "    ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=1e-6, verbose=1), # Reduced patience\n",
     "    ModelCheckpoint(filepath='potato_disease_model_phase1.keras', monitor='val_accuracy', save_best_only=True, verbose=1)\n",
     "]\n",
     "\n",
-    "print(\"\nStarting Phase 1: Feature Extraction (Training top layers)\")\n",
+    "print("\nStarting Phase 1: Feature Extraction (Training top layers)")\n",
     "history_phase1 = model.fit(\n",
     "    train_generator,\n",
     "    steps_per_epoch=len(x_train) // BATCH_SIZE,\n",
@@ -255,7 +261,7 @@
     "    ModelCheckpoint(filepath='potato_disease_model_final.keras', monitor='val_accuracy', save_best_only=True, verbose=1)\n",
     "]\n",
     "\n",
-    "print(\"\nStarting Phase 2: Fine-tuning (Training entire model with low LR)\")\n",
+    "print("\nStarting Phase 2: Fine-tuning (Training entire model with low LR)")\n",
     "history_phase2 = model.fit(\n",
     "    train_generator,\n",
     "    steps_per_epoch=len(x_train) // BATCH_SIZE,\n",
